Fix social icon layout on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,9 @@ a, a:visited {
   background-color: #ccc;
   color: #000;
 }
+.menu span {
+  margin: 0 10px;
+}
 .mailchimp-subscribe input {
   margin: 10px;
 }
@@ -116,7 +119,7 @@ a, a:visited {
 }
 .menu h3 {
   cursor: pointer;
-  margin: auto;
+  margin: 10px auto;
   text-align: center;
 }
 .menu td {
@@ -131,14 +134,13 @@ a, a:visited {
     width: 100%;
   }
   .menu section {
-    margin: 10px 10px;
+    margin: 0 10px;
   }
   .menu section, .menu .btn-tour {
-    margin: 0 100px;
     transition: margin 1s;
   }
   .menu.active section {
-    margin: 10px 10px;
+    /* margin: 10px 10px; */
     transition: margin 1s;
   }
   .menu.active .btn-tour {
@@ -260,21 +262,21 @@ input:checked + .slider:before {
 section.contact .profile-container {
   display: grid;
   grid-gap: 0 20px;
-  grid-template-columns: 150px auto;
+  grid-template-columns: auto 1fr;
   grid-template-rows: auto 1fr;
 }
 .profile-img {
   border-radius: 50%;
   grid-row: 1/3;
-  width: 150px;
+  width: 100px;
 }
 .social-btn-container {
   display: grid;
-  grid-auto-flow: column;
+  grid-template-columns: repeat(auto-fit, minmax(3em,auto));
   justify-content: start;
 }
 .icon {
-  margin: 0 1em;
+  margin: 0 15px 15px 0;
   width: 2em;
 }
 /* END MENU CONFIG */
